# python-clean-arch

./: README.md  main.py  pyproject.toml  run_tests.py  settings.toml
app/: app.py  create_app.py
app/application/interfaces/: cadastro.py  cadastro_carteira.py  carteira.py  transferencia.py
app/application/use_cases/: cadastro.py  cadastro_carteira_create.py  cadastro_create.py  cadastro_get.py  carteira.py  carteira_create.py  transferencia_create.py
app/domain/entities/: cadastro.py  carteira.py  http_request.py  http_response.py  transferencia.py  transferencia_response.py
app/domain/interfaces/: cadastro.py  carteira.py
app/infra/database/: database.py
app/infra/engine/: engine.py
app/infra/interfaces/: database.py  engine.py  logger.py  session.py  settings.py  transferencia_not_ext.py  transferencia_val_ext.py  unit_of_work.py
app/infra/logger/: logger.py
app/infra/logs/: logger.py
app/infra/models/: __init__.py  cadastro.py  carteira.py  transferencia.py
app/infra/repository/: cadastro.py  carteira.py  transferencia.py
app/infra/routes/: cadastro.py  transferencia.py
app/infra/schemas/: cadastro.py  transferencia.py
app/infra/services/: transferencia_not_ext.py  transferencia_val_ext.py
app/infra/session/: session.py
app/infra/settings/: settings.py
app/infra/unit_of_work/: cadastro_carteira_create.py  transferencia_create.py
app/infra/utils/: singleton.py
app/presentation/adapters/: cadastro.py  carteira.py  request.py  response.py  (+1 more)
tests/: conftest.py
tests/integration/: test_cadastro.py
tests/unit/: test_create_app.py
(+9 files in other folders)
