[project]
author= = "Giovane Lima"
name = "plataforma-de-pagamentos"
version = "0.1.0"
description = "Projeto Python criado para estudar Clean Architecture"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dynaconf>=3.2.10",
    "fastapi[standard]>=0.115.12",
    "sqlmodel>=0.0.24",
]
